# taper-des-rebar

./: Cargo.toml
benchmarks/: engines.toml
benchmarks/definitions/curated/: 01-literal.toml  02-literal-alternate.toml  03-date.toml  04-ruff-noqa.toml  05-lexer-veryl.toml  06-cloud-flare-redos.toml  07-unicode-character-data.toml  09-aws-keys.toml  10-bounded-repeat.toml  11-unstructured-to-json.toml  12-dictionary.toml  14-quadratic.toml
benchmarks/definitions/imported/: leipzig.toml  lh3lh3-reb.toml  mariomka.toml  rsc.toml
engines/gregex/: Cargo.toml  main.rs
results/: 02-06-2025.csv  02-06-2025_lazy_cg.csv  02-06-2025_lazy_cg_2.csv  02-06-2025_no_cg_when_not_needed.csv  02-06-2025_outlined.csv  02-06-2025_outlined_2.csv  02-06-2025_pikevm_array_visited.csv  02-06-2025_pikevm_inline_fork.csv  02-06-2025_pikevm_manual_double_loop.csv  02-06-2025_pikevm_manual_mem_management.csv  02-06-2025_pikevm_manual_mem_management_fixed.csv  02-06-2025_pikevm_unsafe.csv  03-06-2025_barrier_both.csv  03-06-2025_barrier_jit.csv  03-06-2025_fast_path_outlined_jit.csv  03-06-2025_no_reset.csv  03-06-2025_rep_movs.csv  03-06-2025_unicode_go_go_go.csv  04-06-2025.csv  04-06-2025_cow_array.csv  06-06-2025_cow_array.csv  07-06-2025_jit_tree.csv  10-06-2025_call_over_jmp.csv  10-06-2025_fix_my_shit.csv  10-06-2025_imported.csv  10-06-2025_inline_cg0_tree.csv  11_06_2025_inlining.csv
