[package]
name = "main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
gregex = { path = "../../../gegex" }
anyhow = "1.0.69"
bstr = { version = "1.2.0", default-features = false, features = ["std"] }
env_logger = "0.9.3"
lexopt = "0.3.0"

[dependencies.klv]
path = "../../shared/klv"
[dependencies.regexredux]
path = "../../shared/regexredux"
[dependencies.timer]
path = "../../shared/timer"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
